# stellar-core

./: .clang-format  .cproject  .dir-locals.el  .dockerignore  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .project  .travis.yml  ADVANCED_OPTIMIZATION_FRAMEWORK_4873.md  AUTHORS  Bug-Template.md  CONTRIBUTING.md  COPYING  Cargo.toml  Dockerfile  INSTALL  INSTALL-Windows.md  INSTALL-Windows.txt  INSTALL.md  ISSUE_TEMPLATE.md  LEIGHNOTES.md  LICENSE-APACHE.txt  Makefile.am  Makefile.in  NEWS  PULL_REQUEST_TEMPLATE.md  README  README.md  Roadmap.md  Rust-based  SECURITY.md  autogen.sh  azure-pipelines.yml  build-fuzz.sh  cackle.toml  ci-build.sh  common.mk  configure.ac  (+26 more)
lib/: Makefile.am  README.md  asio.cpp  binaryfusefilter.h  bloom_filter.hpp  catch.hpp  spdlog.cpp
lib/http/: HttpClient.cpp  HttpClient.h  connection.cpp  connection.hpp  reply.hpp  server.cpp  server.hpp
lib/httpthreaded/: connection.cpp  connection.hpp  connection_mt.cpp  connection_mt.hpp  header_mt.hpp  reply.cpp  reply.hpp  reply_mt.cpp  reply_mt.hpp  request.hpp  request_mt.hpp  request_parser.cpp  request_parser.hpp  request_parser_mt.cpp  request_parser_mt.hpp  server.cpp  server.hpp  server_mt.cpp  server_mt.hpp
lib/json/: jsoncpp.cpp
lib/sodium.xcodeproj/: project.pbxproj
lib/sqlite/: carray.c
lib/tracy-client-sys/: Cargo.toml
lib/util/: basen.h  cbitset.c  cbitset.h  cbitset_portability.h  cpptoml.h  crc16.cpp  crc16.h  easylogging++.cc  easylogging++.h  finally.h  format.h  getopt.h  lrucache.hpp  siphash.cpp  siphash.h  stdrandom.h  uint128_t.cpp  uint128_t.h
overlay/: Cargo.toml
overlay/src/: config.rs  integrated.rs  lib.rs  libp2p_overlay.rs  main.rs  metrics.rs  wire.rs  xdr.rs
overlay/tests/: e2e_binary.rs  kademlia_test.rs
scripts/: ApplyLoad.py  DiffTracyCSV.py  Dockerfile.testing  HistogramGenerator.py  Makefile  OverlaySurvey.py  ParseDump.py  README.md  check-protocol-overlay-versions.sh  check-soroban-env-versions.sh  extract-wasms.sh  frozen_keys_base64_to_hex.py  gather_debug_info  pyproject.toml  resource-calc.ipynb  run_apply_load_matrix.py  run_test_timing_analysis.py  settings-helper.sh  setup  stellar-core-debug-info  test-build-debian-package.sh
scripts/apply_load/: max-sac-template.cfg
scripts/overlay_survey/: simulation.py  util.py
scripts/soroban-settings/: SorobanSettingsUpgrade.py
src/: Makefile.am  Makefile.in
src/ scp/: SCPDriver.h
src/ xdr/: Stellar-SCP.x  Stellar-ledger.x
src/bucket/: Bucket.cpp  Bucket.h  BucketApplicator.cpp  BucketApplicator.h  BucketBase.cpp  BucketBase.h  BucketIndex.cpp  BucketIndex.h  BucketIndexImpl.cpp  BucketIndexImpl.h  BucketIndexUtils.cpp  BucketIndexUtils.h  BucketInputIterator.cpp  BucketInputIterator.h  BucketList.cpp  BucketList.h  BucketListBase.cpp  BucketListBase.h  BucketListSnapshot.cpp  BucketListSnapshot.h  BucketListSnapshotBase.cpp  BucketListSnapshotBase.h  BucketManager.cpp  BucketManager.h  BucketManagerImpl.cpp  BucketManagerImpl.h  BucketMergeAdapter.h  BucketMergeMap.cpp  BucketMergeMap.h  BucketOutputIterator.cpp  BucketOutputIterator.h  BucketSnapshot.cpp  BucketSnapshot.h  BucketSnapshotManager.cpp  BucketSnapshotManager.h  BucketTests.cpp  BucketTests.h  BucketUtils.cpp  BucketUtils.h  DiskIndex.cpp  (+32 more)
src/catchup/: ApplyBucketsWork.cpp  ApplyBucketsWork.h  ApplyBufferedLedgersWork.cpp  ApplyBufferedLedgersWork.h  ApplyCheckpointWork.cpp  ApplyCheckpointWork.h  ApplyLedgerChainWork.cpp  ApplyLedgerChainWork.h  ApplyLedgerWork.cpp  ApplyLedgerWork.h  AssumeStateWork.cpp  AssumeStateWork.h  CatchupCompleteImmediateWork.cpp  CatchupCompleteImmediateWork.h  CatchupCompleteWork.cpp  CatchupCompleteWork.h  CatchupConfiguration.cpp  CatchupConfiguration.h  CatchupManager.h  CatchupManagerImpl.cpp  CatchupManagerImpl.h  CatchupMinimalWork.cpp  CatchupMinimalWork.h  CatchupRange.cpp  CatchupRange.h  CatchupRecentWork.cpp  CatchupRecentWork.h  CatchupTransactionsWork.cpp  CatchupTransactionsWork.h  CatchupWork.cpp  CatchupWork.h  CatchupWorkTests.cpp  CatchupWorkTests.h  DownloadAndApplyBucketsWork.cpp  DownloadAndApplyBucketsWork.h  DownloadAndApplyTransactionsWork.cpp  DownloadAndApplyTransactionsWork.h  DownloadAndVerifyLedgersWork.cpp  DownloadAndVerifyLedgersWork.h  DownloadApplyTxsWork.cpp  (+16 more)
src/clf/: Bucket.cpp  Bucket.h  BucketList.cpp  BucketList.h  CLF.h  CLFDelta.h  CLFGateway.h  CLFManager.h  CLFManagerImpl.cpp  CLFManagerImpl.h  CLFMaster.cpp  CLFMaster.h  CLFTests.cpp  CanonicalLedgerForm.h  LedgerCmp.h  tests.cpp
src/crypto/: BLAKE2.cpp  BLAKE2.h  Base58.cpp  Base58.h  ByteSlice.h  ByteSliceHasher.cpp  ByteSliceHasher.h  CryptoError.h  CryptoTests.cpp  Curve25519.cpp  Curve25519.h  ECDH.cpp  ECDH.h  EdKeyPair.h  Hex.cpp  Hex.h  KeyUtils.cpp  KeyUtils.h  KeyVerification.cpp  KeyVerification.h  README.md  Random.cpp  Random.h  SHA.cpp  SHA.h  SecretKey.cpp  SecretKey.h  SecretStream.cpp  SecretStream.h  ShortHash.cpp  ShortHash.h  Sign.cpp  Sign.h  SignerKey.cpp  SignerKey.h  SignerKeyUtils.cpp  SignerKeyUtils.h  StellarPrivateKey.cpp  StellarPrivateKey.h  StellarPublicKey.cpp  (+6 more)
src/database/: AccountQueries.cpp  AccountQueries.h  DataQueries.cpp  DataQueries.h  Database.cpp  Database.h  DatabaseConnectionString.cpp  DatabaseConnectionString.h  DatabaseConnectionStringTest.cpp  DatabaseImpl.cpp  DatabaseImpl.h  DatabaseTests.cpp  DatabaseTypeSpecificOperation.h  DatabaseUtils.cpp  DatabaseUtils.h  EntryQueries.cpp  EntryQueries.h  InflationQueries.cpp  InflationQueries.h  OfferQueries.cpp  OfferQueries.h  README.md  SignerQueries.cpp  SignerQueries.h  TrustLineQueries.cpp  TrustLineQueries.h  readme.md
src/fba/: Ballot.cpp  Ballot.h  CommitStatement.cpp  CommitStatement.h  CommittedStatement.cpp  CommittedStatement.h  FBA.cpp  FBA.h  FBAGateway.h  FBAMaster.cpp  FBAMaster.h  FBATests.cpp  FBAWorldInterface.h  FBAXDR.x  FutureStatement.cpp  FutureStatement.h  History.cpp  History.h  LocalNode.cpp  LocalNode.h  NOTES  Node.cpp  Node.h  NodePool.cpp  NodePool.h  OurNode.cpp  OurNode.h  PrepareStatement.cpp  PrepareStatement.h  PreparedStatement.cpp  PreparedStatement.h  Slot.cpp  (+8 more)
(+4615 files in other folders)
