[workspace]
resolver = "2"
members = ["src/rust", "lib/tracy-client-sys"]

[patch.crates-io]
tracy-client-sys = { path = "lib/tracy-client-sys" }
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "ae805d0f8c28ca86327a834eea9ce7d29b0a63bb" }

#[patch."https://github.com/stellar/rs-soroban-env"]
#soroban-env-common = { path = "../rs-soroban-env/soroban-env-common" }
#soroban-env-host = { path = "../rs-soroban-env/soroban-env-host/" }
#soroban-test-wasms = { path = "../rs-soroban-env/soroban-test-wasms/" }

# [patch."https://github.com/stellar/rs-stellar-xdr"]
# stellar-xdr = { path = "../rs-stellar-xdr/" }

# [patch.crates-io]
# wasmi = { package = "soroban-wasmi", git = "https://github.com/stellar/wasmi", rev = "862b32f5" }
# soroban-env-common = { git = "https://github.com/stellar/rs-soroban-env", rev = "eda2ab70" }
# soroban-native-sdk-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "eda2ab70" }

[profile.release]
codegen-units = 1
lto = true
